[2463] Fix whitespace.
Fix extra whitespace appearing around breadcrumbs
when zoomed in (Google Chrome).

Make sure header strings are wrapped in _ function.

--- a/ckanext/ecportal/public/css/ecportal.css
+++ b/ckanext/ecportal/public/css/ecportal.css
@@ -165,16 +165,15 @@ div#banner-image-title {
 #header-row2 {
 	position: absolute;
 	top: 100px;
-    width: 744px;
-    padding: 5px 0px 15px 240px;
+    width: 984px;
+    padding: 5px 0px 15px 0px;
     background-color: #0065a2;
 	font-size: 21px;
-	line-height: 1.2;
 }
 
 #site-description {
     position: relative;
-    top: 0;
+    left: 240px;
     color: #ffffff;
 }
 
@@ -185,7 +184,6 @@ div#banner-image-title {
     background-color: #074a8b;
     color: #ffffff;
     font-size: 10.8px;
-    height: 17px;
 }
 
 #path ul{
